# ai_assitant

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  vercel.json
api/: command.js  health.js
backend/: .env.example  package-lock.json  package.json  server.js
backend/scripts/: build-cpp.mjs  test-engine.mjs
backend/src/: commandCatalog.js  commandProcessor.js  engineBridge.js  engineFallback.js
cpp-engine/: CMakeLists.txt  README.md
cpp-engine/src/: command_engine.cpp
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/scene/: AiOrb.tsx  CameraRig.tsx  EnergyRings.tsx  ExperienceCanvas.tsx  ParticleField.tsx  SceneLights.tsx
frontend/src/components/ui/: AssistantPanel.tsx  GlassPanel.tsx  MicButton.tsx  SignalMeter.tsx  StatusPill.tsx
frontend/src/hooks/: useCommandProcessor.ts  useMicrophoneLevel.ts  useSpeechRecognition.ts
frontend/src/lib/: classNames.ts
frontend/src/shaders/: orbShader.ts
frontend/src/types/: assistant.ts  speech.d.ts
scripts/: start-dev.mjs
